##Snoop Project 
v1.1.0_rus
* Добавлен формат 'html'
Анализировать положительные результаты поиска теперь можно прямо в браузере.

* Все результаты поиска сохраняются в каталоге 'results'.
===================================================================================

v1.0.9_rus
* Добавлены в БС новые ресурсы:
Chan4chan;
Ecoustics;
Ficwad;
Forum.caravelgames;
Ieoc;
memrise;
Meta.discourse;
Quibblo.
===================================================================================

v1.0.8_rus
* Добавлены в БС новые ресурсы:
Antipunk;
Ap-pro;
Arhrock;
B17;
Diveforum;
Enot-poloskun;
Forum.ixbt;
Forum.scuba;
Forum.sibmama;
Forumteam;
Glbyh;
Indog;
Kharkovforum;
Lkforum;
Music-rock;
Pesiq;
Prokoni;
Proza;
Psychologies;
Rcmir;
Reibert;
Searchengines;
Stihi;
Studwork;
Uaksu;
Vezha;
X-xack.

Bikepost;
Ccmixter;
Demonscity;
Fishingsib;
Forum.devushka;
Forums.envato;
Gliger;
Shophelp.
===================================================================================

v1.0.7_rus
* Добавлены в БС новые ресурсы:
Autokadabra;
Beerintheevening;
Coj;
Discussions.apple;
Folloart;
Foursquare;
Gitmemory;
Mixupload;
Moscow.flamp;
Myminifactory;
Op.gg;
Op.ggBR;
Op.ggEune;
Op.ggJP;
Op.ggLAN;
Op.ggLAS;
Op.ggNA;
Op.ggOCE;
Op.ggRU;
Op.ggTR;
Pypi;
Showme;
Waveapps.
===================================================================================

v1.0.6_rus
* Добавлена отдельная ветка Termux (Adroid) для Snoop.

* В основную ветку master (GNU/Linux) для Snoop добавлен звук.
$ pip3 install playsound

* Опция '-n' отключает и цвета в терминале и звук (GNU/Linux).

* В ЧС добавлен сайт с медленным ответом (Zomato). 
===================================================================================
v1.0.5_rus
* Добавлены в БС новые ресурсы:
Advego;
Fegatch;
Forum.md;
Forums.drom;
Forums.sourceruns;
Kali.org.ru;
Kuban.forum24;
Mama;
Mamochki;
Mamuli;
Mdregion;
Politforums;
Runitonce;
Runnersworld;
Trainsim.