@@ -78,12 +78,12 @@
 77. [CrossfireRU](https://cfire.mail.ru)
 78. [Crunchyroll](https://www.crunchyroll.com/)
 79. [D3RU](https://d3.ru/)
-80. [DEV Community](https://dev.to/)
-81. [DailyMotion](https://www.dailymotion.com/)
-82. [Dailykos](https://www.dailykos.com)
-83. [DatingRU](http://dating.ru)
-84. [Demonscity](http://demonscity.combats.com/inf.pl?adam)
-85. [Designspiration](https://www.designspiration.net/)
+80. [DailyMotion](https://www.dailymotion.com/)
+81. [Dailykos](https://www.dailykos.com)
+82. [DatingRU](http://dating.ru)
+83. [Demonscity](http://demonscity.combats.com/inf.pl?adam)
+84. [Designspiration](https://www.designspiration.net/)
+85. [Dev.to](https://dev.to/)
 86. [DevRant](https://devrant.com/)
 87. [DeviantART](https://deviantart.com)
 88. [Discogs](https://www.discogs.com/)
@@ -91,7 +91,7 @@
 90. [Discussions.apple](https://discussions.apple.com/)
 91. [Disqus](https://disqus.com/)
 92. [Diveforum](https://diveforum.spb.ru/)
-93. [Docker Hub](https://hub.docker.com/)
+93. [DockerHub](https://hub.docker.com/)
 94. [Dribbble](https://dribbble.com/)
 95. [Drive2](https://www.drive2.ru/)
 96. [Duolingo](https://duolingo.com/)
@@ -186,8 +186,8 @@
 185. [Jeuxvideo](http://www.jeuxvideo.com)
 186. [Jimdo](https://jimdosite.com/)
 187. [Kaggle](https://www.kaggle.com/)
-188. [Kali community](https://forums.kali.org/)
-189. [Kali.org.ru](https://kali.org.ru)
+188. [Kali.org.ru](https://kali.org.ru)
+189. [Kali_community](https://forums.kali.org/)
 190. [KanoWorld](https://world.kano.me/)
 191. [Keybase](https://keybase.io/)
 192. [Kharkovforum](https://www.kharkovforum.com/)
@@ -239,9 +239,9 @@
 238. [NICommunityForum](https://www.native-instruments.com/forum/)
 239. [NPM](https://www.npmjs.com/)
 240. [NPM-Package](https://www.npmjs.com/)
-241. [NameMC (Minecraft.net skins)](https://namemc.com/)
-242. [NationStates Nation](https://nationstates.net)
-243. [NationStates Region](https://nationstates.net)
+241. [NameMC](https://namemc.com/)
+242. [NationStates_Nation](https://nationstates.net)
+243. [NationStates_Region](https://nationstates.net)
 244. [Newgrounds](https://newgrounds.com)
 245. [NnRU](https://www.nn.ru/)
 246. [Notabug.org](https://notabug.org/)
@@ -284,7 +284,7 @@
 283. [Pinterest](https://www.pinterest.com/)
 284. [PlayStore](https://play.google.com/store)
 285. [Plug.DJ](https://plug.dj/)
-286. [Pokemon Showdown](https://pokemonshowdown.com)
+286. [Pokemon_Showdown](https://pokemonshowdown.com)
 287. [Pokerstrategy](http://www.pokerstrategy.net)
 288. [Politforums](https://www.politforums.net/)
 289. [Polygon](https://www.polygon.com/)
@@ -350,7 +350,7 @@
 349. [SportsRU](https://www.sports.ru/)
 350. [SportsTracker](https://www.sports-tracker.com/)
 351. [Spotify](https://open.spotify.com/)
-352. [Star Citizen](https://robertsspaceindustries.com/)
+352. [Star_Citizen](https://robertsspaceindustries.com/)
 353. [Steam](https://steamcommunity.com/)
 354. [SteamGroup](https://steamcommunity.com/)
 355. [Steamid](https://steamid.uk/)
@@ -398,8 +398,8 @@
 397. [Warriorforum](https://www.warriorforum.com/)
 398. [Wattpad](https://www.wattpad.com/)
 399. [Waveapps](https://community.waveapps.com)
-400. [We Heart It](https://weheartit.com/)
-401. [WebNode](https://www.webnode.cz/)
+400. [WebNode](https://www.webnode.cz/)
+401. [Weeartit](https://weheartit.com/)
 402. [Whonix](https://forums.whonix.org/)
 403. [Wikidot](http://www.wikidot.com/)
 404. [Wikipedia](https://www.wikipedia.org/)
