@@ -4,6 +4,8 @@ v1.1.0_rus
 Анализировать положительные результаты поиска теперь можно прямо в браузере.
 
 * Все результаты поиска сохраняются в каталоге 'results'.
+
+* Поправлены опции Snoop на OS Windows. 
 ===================================================================================
 
 v1.0.9_rus
